<?xml version="1.0"?>
<package format="3">
  <name>drone_direction</name>
  <version>0.1.0</version>
  <description>ROS2 package for controlling drone direction using AI models.</description>
  <maintainer email="eladpar@gmail.com">Elad Par</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

